tests/typing/pass/smtlib/v2.7/arith/minus_one.smt2
(set-logic QF_LIA)
(declare-const a Int)
(assert (= 0 (* (- 1) a)))
(check-sat)
(exit)
