tests/typing/errors/unknown_logic/exponential/exponentiation.smt2
(set-logic QF_EIA)
(assert (= 1 (** 0 0)))
(check-sat)
(exit)
